# vhack

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.override.yml.example  docker-compose.yml  main.py  main_launcher.py  pyproject.toml  vhack.py  vulnerable_agent_tools.py  web_interface.py
.github/workflows/: analyze-org-repos.yml  analyze-repo-gpt-5-nano.yml  analyze-repo-only.yml  analyze-repo.yml  analyze-tools-from-repo-gpt-5-nano.yml  analyze-tools-from-repo.yml  analyze-tools-gpt-5-nano.yml  analyze-tools-only.yml  analyze-tools.yml  build-docker.yml  build-rust.yml  daily-analyze-dummy-org.yml  generate-prompts-from-tool-analysis-gpt-5-nano.yml  generate-prompts-from-tool-analysis.yml  generate-prompts-glm-4-32b.yml  generate-prompts-gpt-5-nano.yml  generate-prompts-llama-3-8b-instruct.yml  generate-prompts-llama-3.1-8b-instruct.yml  generate-prompts-llama-3.2-3b-instruct.yml  generate-prompts-ministral-8b.yml  generate-prompts-mistral-7b-instruct.yml  generate-prompts-only.yml  generate-prompts-phi-3.5-mini-128k-instruct.yml  generate-prompts-qwen-2.5-7b-instruct.yml  generate-prompts.yml  glm-4-32b-vs-glm-4-32b.yml  glm-4-32b-vs-gpt-5-nano.yml  (+26 more)
configs/: creative_config.yaml  finance_config.yaml  medical_config.yaml  research_config.yaml  sysadmin_config.yaml
docs/: AGENT_MODES.md  CONFIGURATION_GUIDE.md  DOCKER_PROFILES.md  HTTP_API.md  TOOL_VULNERABILITIES.md  VULNERABILITY_GUIDE.md
scripts/: run-scenario.sh  setup.sh  start_web.sh
templates/: index.html
tests/: test_config.py
vulnerability-scanner-rs/: .gitignore  Cargo.toml
(+23 files in other folders)
